--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -324,7 +324,9 @@ svg.ripple {
 /* =======================================================================
 03 Header
 ========================================================================== */
-
+#primary-nav{
+    background-color: $white;
+}
 
 
 /* =======================================================================
