--- a/_scss/_desktop.scss
+++ b/_scss/_desktop.scss
@@ -47,6 +47,31 @@ header {
 	}
 }
 
+.nav-container{
+	height: 80px;
+}
+
+.logo{
+	margin-top: 15px;
+}
+
+#primary-nav{
+	ul{
+		li{
+			font-size: 1.4em;
+		}
+	}
+}
+
+.lvl1{
+	.icon-home3{
+		color: $bawarchi-red;
+		font-size: 1.2em;
+	}
+
+	margin-top: 19px;
+}
+
 
 /* =======================================================================
 04 Main Navigation
