--- a/_scss/common/_vars.scss
+++ b/_scss/common/_vars.scss
@@ -34,3 +34,6 @@ $grey: 			#9e9e9e;
 $blueGrey: 		#607d8b;
 $black: 		#000000;
 $white: 		#ffffff;
+
+$bawarchi-red: 		#bd292d;
+$b-grey:			#1d1d1d;
