Mobile Navigation Fixed

--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -39,8 +39,24 @@ DEPENDENCIES
 /* =======================================================================
 03 Header
 ========================================================================== */
+#primary-nav{
+	.logo{
+		img{
+			width: 90%;
+			margin: 0 0px 0px 5px;
+		}
+	}
 
+	h1{
+		padding: 0;
+		margin-top: 3px;
+		margin-left: 10px;
+	}
+}
 
+.login-container{
+	display: none;
+}
 
 /* =======================================================================
 04 Main Navigation
