--- a/_scss/_desktop.scss
+++ b/_scss/_desktop.scss
@@ -52,7 +52,8 @@ header {
 }
 
 .logo{
-	margin-top: 15px;
+	margin-top: 10px; 
+
 }
 
 #primary-nav{
@@ -61,14 +62,14 @@ header {
 			font-size: 1.4em;
 		}
 	}
+
+	h1{
+		margin: 0;
+		font-size: 2.8em;
+	}
 }
 
 .lvl1{
-	.icon-home3{
-		color: $bawarchi-red;
-		font-size: 1.2em;
-	}
-
 	margin-top: 19px;
 }
 
