--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -374,6 +374,20 @@ svg.ripple {
     background-color: $bawarchi-red;
 }
 
+.lvl1{
+    .icon-home3{
+        color: $bawarchi-red;
+        font-size: 1.2em;
+    }
+}
+
+#primary-nav{
+    h1{
+        color: $bawarchi-red;
+        font-weight: 700;
+    }
+}
+
 
 
 /* =======================================================================
