--- a/_scss/common/_fonts.scss
+++ b/_scss/common/_fonts.scss
@@ -155,9 +155,16 @@ $ultra-bold: 900;
 .icon-google-plus3:before {
 	content: "\ea8a";
 }
+.icon-facebook:before {
+	content: "\ea8c";
+}
+.icon-facebook3:before {
+	content: "\ea8e";
+}
 .icon-twitter:before {
 	content: "\ea91";
 }
 .icon-linkedin2:before {
 	content: "\eac9";
 }
+
