--- a/_icomoon/style.css
+++ b/_icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?bgwnau');
-	src:url('fonts/icomoon.eot?#iefixbgwnau') format('embedded-opentype'),
-		url('fonts/icomoon.ttf?bgwnau') format('truetype'),
-		url('fonts/icomoon.woff?bgwnau') format('woff'),
-		url('fonts/icomoon.svg?bgwnau#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-q83kgs');
+	src:url('fonts/icomoon.eot?#iefix-q83kgs') format('embedded-opentype'),
+		url('fonts/icomoon.ttf?-q83kgs') format('truetype'),
+		url('fonts/icomoon.woff?-q83kgs') format('woff'),
+		url('fonts/icomoon.svg?-q83kgs#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -145,6 +145,12 @@
 }
 .icon-google-plus3:before {
 	content: "\ea8a";
+}
+.icon-facebook:before {
+	content: "\ea8c";
+}
+.icon-facebook3:before {
+	content: "\ea8e";
 }
 .icon-twitter:before {
 	content: "\ea91";
