--- a/_scss/_desktop.scss
+++ b/_scss/_desktop.scss
@@ -59,13 +59,52 @@ header {
 #primary-nav{
 	ul{
 		li{
+			&:before {
+				content: "";
+				position: absolute;
+				width: 100%;
+				height: 4px;
+				bottom:0;
+				left: 0;
+				background-color: $bawarchi-red;
+				visibility: hidden;
+				-webkit-transform: scaleX(0);
+				transform: scaleX(0);
+
+				@include transition( all, 0.2s, ease-in-out );
+			}
+
+			&:hover:before {
+				visibility: visible;
+				-webkit-transform: scaleX(0.7);
+				transform: scaleX(0.7);
+			}  
+
+			&.active{
+				&::before {
+					visibility: visible;
+					-webkit-transform: scaleX(0.7);
+					transform: scaleX(0.7);
+				}  
+
+				a{color: $bawarchi-red;}
+			}
+
 			font-size: 1.4em;
+			position: relative;
+			min-height: 42px;
 		}
 	}
 
 	h1{
 		margin: 0;
 		font-size: 2.8em;
+		width: 180px;
+	}
+
+	.teaser{
+		font-size: 1.4em;
+		margin: 0;
 	}
 }
 
@@ -118,7 +157,6 @@ footer{
 }
 
 .upper-block{
-	@include clearfix();
 
 	padding-bottom: 40px;
 	border-bottom: 1px solid #dedee0;
