--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -376,7 +376,6 @@ svg.ripple {
 
 .lvl1{
     .icon-home3{
-        color: $bawarchi-red;
         font-size: 1.2em;
     }
 }
@@ -446,6 +445,8 @@ footer{
         position: relative;
     }
 }
+
+.upper-block{@include clearfix();}
 
 .lower-block{
     @include clearfix();
