--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -244,6 +244,106 @@ svg.ripple {
 /* =======================================================================
 02 Layout
 ========================================================================== */
+
+/*Added by Mayur*/
+#main{
+    background-color: rgba(0,0,0,0.79);
+  height: 644px;
+  width: 100%;
+  position: relative
+
+}
+
+#main-wrapper{
+  background-image: url(/../images/chef.gif);
+  height: 774px;
+}
+
+.inner-section-search-label{
+  text-shadow: 0 0 2px rgba(0,0,0,.1);
+  width: auto;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 28px !important;
+  line-height: 52px;
+  color: #fff;
+  margin-top: 200px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  word-spacing: 1px
+}
+
+.inner-section-wrapper{
+  display:block;
+  height:48px;
+  margin: 20px 55px 20px 55px;
+ }
+
+.inner-section{
+  background-color:#fff;
+  height:100%;
+}
+
+.inner-section-select-location,.inner-section-select-city{
+  display:inline-block;
+  height: 100%;
+  width:300px;
+  float:left;
+  
+ }
+
+.select-location-icon{
+  float: left;
+  width: 10%;
+  background-image: url(/assets/bawarchi/images/map-arrow-icon.png);
+  height: 100%;
+}
+.select-location-text{
+  float: left;
+  width: 90%;
+  height: 100%;
+}
+
+.textBox{
+  height:100%;
+  width:100%;
+  text-align:center;
+  font-size:20px !important;  
+  border:none;
+}
+
+.select-city-text{
+  float:left;
+  width:100%;
+  height:100%;
+}
+
+.inner-section-space{
+  height: 100%;
+  display: inline-block;
+  width: 3px;
+  background-color: $bawarchi-red;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float:left;
+}
+
+.inner-section-search-button{
+  background-color: $bawarchi-red;
+  font-family: -webkit-pictograph;
+  height: 100%;
+  display: inline-block;
+  width: 247px;
+  text-align: center;
+  float: left;
+  text-transform: uppercase;
+  font-size: 26px !important;
+  color: white;
+  font-weight: 400;
+  word-spacing: 1px;
+  }
+/* till here*/
+
 .backstretch {
     background-size: cover;
     background-repeat: no-repeat;
