--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -287,7 +287,7 @@ svg.ripple {
 .inner-section-select-location,.inner-section-select-city{
   display:inline-block;
   height: 100%;
-  width:300px;
+  width:30em;
   float:left;
   
  }
@@ -321,7 +321,7 @@ svg.ripple {
 .inner-section-space{
   height: 100%;
   display: inline-block;
-  width: 3px;
+  width: 0.3em;
   background-color: $bawarchi-red;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -333,7 +333,7 @@ svg.ripple {
   font-family: -webkit-pictograph;
   height: 100%;
   display: inline-block;
-  width: 247px;
+  width: 9.5em;
   text-align: center;
   float: left;
   text-transform: uppercase;
@@ -342,7 +342,44 @@ svg.ripple {
   font-weight: 400;
   word-spacing: 1px;
   }
-/* till here*/
+  
+.main-page-best-cooks{
+  height: 419px;
+  display:block; 
+}  
+
+.main-page-best-cooks-inner-header{
+  text-align: center;
+  font-family: titillium regular;
+  font-size: 17px !important;
+}
+
+.main-page-best-cooks-inner-content{
+  text-align: center;
+  font-family: titillium regular;
+  font-size: 31px !important;
+  margin-top: 34px; 
+}
+
+.main-page-best-cooks-selection{
+  text-align: center;
+  margin-top: 210px;
+}
+
+.main-page-best-cooks-button{
+    width: 20em;
+    height: auto;
+    background-color: #bd292d;    
+    -moz-border-radius: 15px;    
+    font-size: 20px;
+    -webkit-border-radius: 5px;    
+    border: 5px solid #bd292d;   
+    padding: 5px;
+    color: white;
+
+}
+/*
+ *  till here*/
 
 .backstretch {
     background-size: cover;
