--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -79,7 +79,19 @@ DEPENDENCIES
 /* =======================================================================
 05 Homepage
 ========================================================================== */
+.banner-container{
+	height: 420px;
+}
 
+.search-form{
+	input, .search-btn{
+		width: 100%;
+		margin-bottom: 5px; 
+	}
+
+	top:110px;
+	width: 90%;		
+}
 
 
 /* =======================================================================
