Homepage Main body done

--- a/_scss/_desktop.scss
+++ b/_scss/_desktop.scss
@@ -99,8 +99,26 @@ header {
 /* =======================================================================
 05 Homepage
 ========================================================================== */
+.categories{width: 92%;}
+
+.content{
+
+        h3{font-size: 2em;}
+
+        .cat-count{font-size: 17px;}
+
+        width: 68%;
+}    
 
 
+.cat-tab{
+	img{
+		width: 32%;
+		max-width: 125px;
+	} 
+
+	height: 160px; 
+}
 
 
 
