--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -89,11 +89,47 @@ DEPENDENCIES
 		margin-bottom: 5px; 
 	}
 
+	& > p{font-size: 2.6em;}
+
 	top:110px;
 	width: 90%;		
 }
 
+.cat-tab{
 
+	img{
+		width: 125px;
+		display: block;
+	}    
+    
+    text-align: center; 
+    width: 100%;
+    margin: 15px 0;
+    min-height: 220px;
+    padding:22px 20px;
+}
+
+.container-fluid{
+	height: auto;
+}
+
+.content{
+
+        h3{font-size: 2.1em;}
+
+        .cat-count{font-size: 17px;}
+
+        width: 100%;
+}  
+
+.custom-block{
+    margin: 25px 0 50px;   
+}
+
+
+.btn-large{
+    font-size: 1.3em;
+}    
 /* =======================================================================
 06 Standard
 ========================================================================== */
