--- a/_scss/_tablet.scss
+++ b/_scss/_tablet.scss
@@ -96,6 +96,8 @@ img {
 	 	width: 320px;
 	 }
 
+	 & > p{font-size: 3em;}
+
 	height: 160px;
 	top: 240px;
 
@@ -121,7 +123,52 @@ img {
 	height: 72px;
 }
 
+.cat-tab{
+	img{
+		width: 23%;		
+		float: left;
+		max-width: 75px;
+	}  
 
+	text-align: left;
+    width: 46%;
+    margin: 2%;
+    height: 120px;
+    padding:20px;
+}
+
+.content{
+
+        h3{font-size: 1.8em;}
+
+        .cat-count{font-size: 15px;}
+
+        width: 77%;
+        padding-left: 17px;
+}        
+
+.custom-block{
+    margin: 55px 0 85px;   
+}
+
+.btn-large{
+    font-size: 1.7em;
+} 
+
+.ul{
+	&:after{
+		content: "";
+		display: block;
+		width: 100%;
+		height: 5px;
+		position: absolute;
+		background-color: $bawarchi-red;
+		bottom: -9px;
+		left: 0;
+	}
+
+	position: relative;
+}
 
 
 /* =======================================================================
