--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -406,11 +406,7 @@ svg.ripple {
 }
 
 .search-form{
-  & > p{
-      font-size: 3em;
-      color: $white;
-
-  }
+  & > p{color: $white;}
 
   input{
     &:nth-of-type(1){padding-left: 38px;}
@@ -458,12 +454,109 @@ svg.ripple {
   position: relative;
 }
 
+.categories{
+    @include clearfix();
+        
+    padding: 5px 0 35px;
+    list-style: none;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+}
+
+.cat-tab{
+    img{
+        background-color: transparent;
+        border-radius: 50%;
+    }
+    
+    .content{
+        @include clearfix();
+
+        h3, h5{
+            color: #484848;
+            text-transform: uppercase;
+            margin: 0;
+            float: left;
+        }
+
+        h5{
+            font-size: 1em;
+            font-style: normal;
+            padding-top: 12px;
+            clear:  both;
+        }
+        .cat-count{
+            float: right;
+            background-color: $bawarchi-red;
+            color: $white;
+            padding: 7px 9px;
+            position: relative;
+            top: -4px;
+        }
+
+        float: left;
+        padding-top:10px;
+
+    }
+
+    .btn-all{
+        height: 40px;
+        width: 75px;
+        color: $bawarchi-red;
+        font-size: 0.8em;
+        display: block;
+        position: absolute;
+        right: 20px;
+        bottom: -20px;    
+        background-color: #f7f5f5;
+        border-radius: 5px;
+        border: 1px solid #d4d4d4;
+        padding: 10px 10px 0;
+        margin: 0; 
+        text-align: center; 
+    }
+
+    
+    box-sizing: border-box;
+    float: left;    
+    border: 1px solid #b8b8b8;
+    position: relative;
+}
+
+.custom-block{
+    @include clearfix();
+
+    h3{
+        margin-top: 0;
+        font-size: 3.1em;
+        color: #2a2d2e;
+        font-weight: 300;
+        margin-bottom: 25px; 
+    }
+
+    text-align: center; 
+}
+
+.btn-large{
+    color: $white;
+    background-color: $bawarchi-red;
+    padding: 15px 20px;
+    position: relative;
+    top: 25px;
+    border-radius: 5px;
+}
+
+
+
 
 /* =======================================================================
 06 Standard
 ========================================================================== */
 .container-fluid {
     @extend %container;
+
+    &.tab-container{height: auto;}
 }
 
 .standard-banner {
