Bawarchi main page(dynamic cook list ) added. Checked for window resize and desktop. Will add changes once discussion on how to show it on mobile and tablet is done

--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -79,9 +79,6 @@ DEPENDENCIES
 /* =======================================================================
 05 Homepage
 ========================================================================== */
-.banner-container{
-	height: 420px;
-}
 
 .search-form{
 	input, .search-btn{
@@ -94,6 +91,7 @@ DEPENDENCIES
 	top:110px;
 	width: 90%;		
 }
+
 
 .cat-tab{
 
@@ -183,5 +181,35 @@ DEPENDENCIES
 08 Components
 ========================================================================== */
 @import 'components/mobileMenu/mobile';
+
+/* =======================================================================
+09 Main Page(Dynamic Cook List)
+   ======================================================================= */
+.main-page-banner-container{
+ height:300px; 
+}
+.banner-container{
+  height: 420px;
+}
+.search-form-main-page{
+input, .search-btn{
+    width: 100%;
+    margin-bottom: 5px; 
+  }
+
+  & > p{font-size: 2.6em;}
+  
+  top:20px;
+  width: 90%;   
+  
+}
+
+.main-page-cook-selected{
+  display:none;
+}
+.main-page-filter{
+  display:none;
+}
+
 
 
