--- a/_icomoon/style.css
+++ b/_icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-q83kgs');
-	src:url('fonts/icomoon.eot?#iefix-q83kgs') format('embedded-opentype'),
-		url('fonts/icomoon.ttf?-q83kgs') format('truetype'),
-		url('fonts/icomoon.woff?-q83kgs') format('woff'),
-		url('fonts/icomoon.svg?-q83kgs#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-o10v86');
+	src:url('fonts/icomoon.eot?#iefix-o10v86') format('embedded-opentype'),
+		url('fonts/icomoon.ttf?-o10v86') format('truetype'),
+		url('fonts/icomoon.woff?-o10v86') format('woff'),
+		url('fonts/icomoon.svg?-o10v86#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,6 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cross:before {
+	content: "\e604";
+}
 .icon-feed:before {
 	content: "\e600";
 }
@@ -157,4 +160,13 @@
 }
 .icon-linkedin2:before {
 	content: "\eac9";
+}
+.icon-long-arrow-up:before {
+	content: "\e602";
+}
+.icon-long-arrow-down:before {
+	content: "\e603";
+}
+.icon-filter:before {
+	content: "\e601";
 }
