--- a/_scss/_tablet.scss
+++ b/_scss/_tablet.scss
@@ -188,27 +188,13 @@ img {
 }
 
 
-
+.list-container{
+	width: 74%; 
+}
 
 
 .main-tabs{
-	.c-tab{
-		&.active{
-			&:hover{opacity: 1;}
-		}
-
-		&:hover{
-			opacity: 0.8;
-		}
-
-		&:last-child{border-right:none;}
-
-		width: 25%;
-		font-size: 22px;
-		height: 125px;
-		text-align: center;
-		border-right: 1px solid #8C0E12;
-	}
+	display: none;
 }
 
 
@@ -248,6 +234,11 @@ img {
 	}
 }
 
+
+.filter{
+	padding-right: 10px;
+	width: 26%; 
+}
 /* =======================================================================
 07 Footer
 ========================================================================== */
